--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@mui/icons-material": "^5.10.9",
+    "@next/mdx": "^13.0.0",
+    "gray-matter": "^4.0.3",
     "next": "12.3.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
